fix_category
